fix(select): fix flickering animation on opening
- Fix flickering animation on opening
- Add useMemo, useCallback to prevent unneccesary rerenders\
- Add Tab handling
- Add empty select handling

--- a/src/shared/layouts/default-layout/header/navigation/browse-genres-popup/browse-genres-popup.scss
+++ b/src/shared/layouts/default-layout/header/navigation/browse-genres-popup/browse-genres-popup.scss
@@ -5,7 +5,6 @@
   top: calc(100% + 15px);
   left: 0;
   display: flex;
-  width: 745px;
   max-width: 745px;
   padding: 20px 0 20px 30px;
   border: 1px solid $border-color;
