--- a/src/shared/layouts/default-layout/header/navigation/browse-genres-popup/genres/genres.scss
+++ b/src/shared/layouts/default-layout/header/navigation/browse-genres-popup/genres/genres.scss
@@ -19,10 +19,9 @@
     display: grid;
     margin-top: 20px;
     margin-bottom: 5px;
+    margin-right: 20px;
     grid-template: 1fr 1fr 1fr  1fr 1fr / 1fr 1fr 1fr;
     row-gap: 40px;
-
-
-
+    column-gap: 40px;
   }
 }
