--- a/src/shared/ui/select/select.scss
+++ b/src/shared/ui/select/select.scss
@@ -6,7 +6,7 @@
   .select__select {
   }
 
-  .select__title {
+  .select__trigger {
     font-family: $third-font-family;
     font-size: 18px;
   }
