--- a/src/shared/ui/vertical-line/vertical-line.scss
+++ b/src/shared/ui/vertical-line/vertical-line.scss
@@ -2,6 +2,7 @@
 
 .vertical-line {
   width: 1px;
+  min-width: 1px;
   min-height: 100%;
   background: $border-color;
 }
